objects/PureConnect_Dev_Parts__c.object
<CustomObject>
    <fields>
        <fullName>Free_Part_APN_Number__c</fullName>
        <formula>Free_Part__r.APN_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Free Part APN Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Free_Part__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Free Part</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>PureConnect Dev Parts (Free Product(To Include with Purchase))</relationshipLabel>
        <relationshipName>Pure_Connect_Free_Parts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Purchased_Part__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Purchased Part</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>PureConnect Dev Parts (Purchased Product)</relationshipLabel>
        <relationshipName>Pure_Connect_Free_Parts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Purchased_Product_APN_Number__c</fullName>
        <formula>Purchased_Part__r.APN_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Purchased Product APN Number</label>
        <type>Text</type>
    </fields>
    <label>PureConnect Dev Part</label>
    <nameField>
        <displayFormat>PCFP-{0000}</displayFormat>
        <label>PureConnect Dev Part Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PureConnect Dev Parts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>